fix(modal): show close button on small screens

--- a/src/styles/partials/common.less
+++ b/src/styles/partials/common.less
@@ -446,7 +446,8 @@ form {
     	margin-left: 320px;
 
     	@media(max-width: 350px) {
-    		margin-left: 300px;
+    		margin-left: 270px;
+    		right: 10px;
     	}
 	}
 }
